--- a/index.html
+++ b/index.html
@@ -102,6 +102,12 @@
             margin: 8px 0;
             line-height: 1.5;
         }
+
+        .comentario {
+            font-style: italic;
+            color: #555;
+            margin-top: 5px;
+        }
     </style>
 </head>
 <body>
@@ -110,82 +116,7 @@
 
     <ul>
         <!-- Clases del Código -->
-        <li>
-            <a onclick="toggleSubmenu(this)">Clases del Código</a>
-            <div class="submenu">
-
-                <div class="apartado">
-                    <h3 onclick="toggleApartado(this)">1. Pila (Stack) → Emergencias</h3>
-                    <div class="apartado-content">
-                        <p><b>Uso:</b></p>
-                        <p>• Almacena las emergencias con el método <b>LIFO</b> (Last In, First Out).<br>
-                           • Cuando ocurre una emergencia, se agrega con <code>push()</code>.<br>
-                           • Para atenderla, se usa <code>pop()</code>, sacando la más reciente.<br>
-                           • Para consultar sin quitarla, se usa <code>peek()</code>.
-                        </p>
-                        <p><b>Algoritmo:</b> La pila permite que la última emergencia registrada sea la primera en resolverse, lo cual tiene sentido en situaciones críticas.</p>
-                    </div>
-                </div>
-
-                <div class="apartado">
-                    <h3 onclick="toggleApartado(this)">2. Cola con Prioridad (Priority Queue) → Clientes</h3>
-                    <div class="apartado-content">
-                        <p><b>Uso:</b></p>
-                        <p>• Se utiliza para gestionar a los clientes en espera.<br>
-                           • Los clientes se insertan con prioridad distinta:<br>
-                           – VIP y para llevar → prioridad más alta.<br>
-                           – Regulares en sala → prioridad menor.
-                        </p>
-                        <p><b>Algoritmo:</b> El programa define un sistema de prioridad: el cliente con mayor prioridad numérica es atendido primero. Esto simula una cola dinámica que respeta importancia antes que orden de llegada.</p>
-                    </div>
-                </div>
-
-                <div class="apartado">
-                    <h3 onclick="toggleApartado(this)">3. Lista Enlazada (LinkedList) → Tareas</h3>
-                    <div class="apartado-content">
-                        <p><b>Uso:</b></p>
-                        <p>• Permite agregar tareas, eliminarlas por índice y buscarlas por texto.<br>
-                           • Es flexible para manejar listas que cambian constantemente.
-                        </p>
-                        <p><b>Algoritmo:</b></p>
-                        <p>• Se recorre la lista para buscar coincidencias (<code>buscarIndicePorTexto</code>).<br>
-                           • También se organiza agrupando las tareas por departamento (Cocina, Caja, Servicio) usando un <b>TreeMap</b> que ordena alfabéticamente.
-                        </p>
-                    </div>
-                </div>
-
-                <div class="apartado">
-                    <h3 onclick="toggleApartado(this)">4. Tabla Hash (Hashtable) → Contadores y Menú</h3>
-                    <div class="apartado-content">
-                        <p><b>Uso en contadores:</b></p>
-                        <p>• Guarda cuántas tareas, emergencias y clientes se han creado.<br>
-                           • Ejemplo: <code>contador.put("TAREAS_CREADAS", 0);</code>
-                        </p>
-                        <p><b>Uso en menús de comida:</b></p>
-                        <p>• Se usan varias tablas hash para consultar rápidamente un platillo por su nombre.<br>
-                           • Esto evita recorrer listas grandes y mejora el acceso.
-                        </p>
-                        <p><b>Algoritmo:</b> Se aprovecha la búsqueda <b>O(1)</b> de una tabla hash para acceder rápido a un platillo específico.</p>
-                    </div>
-                </div>
-
-                <div class="apartado">
-                    <h3 onclick="toggleApartado(this)">5. Árbol Binario → Empleados</h3>
-                    <div class="apartado-content">
-                        <p><b>Uso:</b></p>
-                        <p>• Representa la jerarquía del restaurante.<br>
-                           • El nodo raíz es el CEO (MYXER).<br>
-                           • Tiene ramas para Caja, Cocina y Servicio (meseros).
-                        </p>
-                        <p><b>Algoritmo:</b></p>
-                        <p>• Se usa búsqueda en árbol para encontrar empleados.<br>
-                           • También se recorre el subárbol para listar empleados de un área.
-                        </p>
-                    </div>
-                </div>
-
-            </div>
-        </li>
+        <li> <a onclick="toggleSubmenu(this)">Clases del Código</a> <div class="submenu"> <div class="apartado"> <h3 onclick="toggleApartado(this)">1. Pila (Stack) → Emergencias</h3> <div class="apartado-content"> <p><b>Uso:</b></p> <p>• Almacena las emergencias con el método <b>LIFO</b> (Last In, First Out).<br> • Cuando ocurre una emergencia, se agrega con <code>push()</code>.<br> • Para atenderla, se usa <code>pop()</code>, sacando la más reciente.<br> • Para consultar sin quitarla, se usa <code>peek()</code>. </p> <p><b>Algoritmo:</b> La pila permite que la última emergencia registrada sea la primera en resolverse, lo cual tiene sentido en situaciones críticas.</p> </div> </div> <div class="apartado"> <h3 onclick="toggleApartado(this)">2. Cola con Prioridad (Priority Queue) → Clientes</h3> <div class="apartado-content"> <p><b>Uso:</b></p> <p>• Se utiliza para gestionar a los clientes en espera.<br> • Los clientes se insertan con prioridad distinta:<br> – VIP y para llevar → prioridad más alta.<br> – Regulares en sala → prioridad menor. </p> <p><b>Algoritmo:</b> El programa define un sistema de prioridad: el cliente con mayor prioridad numérica es atendido primero. Esto simula una cola dinámica que respeta importancia antes que orden de llegada.</p> </div> </div> <div class="apartado"> <h3 onclick="toggleApartado(this)">3. Lista Enlazada (LinkedList) → Tareas</h3> <div class="apartado-content"> <p><b>Uso:</b></p> <p>• Permite agregar tareas, eliminarlas por índice y buscarlas por texto.<br> • Es flexible para manejar listas que cambian constantemente. </p> <p><b>Algoritmo:</b></p> <p>• Se recorre la lista para buscar coincidencias (<code>buscarIndicePorTexto</code>).<br> • También se organiza agrupando las tareas por departamento (Cocina, Caja, Servicio) usando un <b>TreeMap</b> que ordena alfabéticamente. </p> </div> </div> <div class="apartado"> <h3 onclick="toggleApartado(this)">4. Tabla Hash (Hashtable) → Contadores y Menú</h3> <div class="apartado-content"> <p><b>Uso en contadores:</b></p> <p>• Guarda cuántas tareas, emergencias y clientes se han creado.<br> • Ejemplo: <code>contador.put("TAREAS_CREADAS", 0);</code> </p> <p><b>Uso en menús de comida:</b></p> <p>• Se usan varias tablas hash para consultar rápidamente un platillo por su nombre.<br> • Esto evita recorrer listas grandes y mejora el acceso. </p> <p><b>Algoritmo:</b> Se aprovecha la búsqueda <b>O(1)</b> de una tabla hash para acceder rápido a un platillo específico.</p> </div> </div> <div class="apartado"> <h3 onclick="toggleApartado(this)">5. Árbol Binario → Empleados</h3> <div class="apartado-content"> <p><b>Uso:</b></p> <p>• Representa la jerarquía del restaurante.<br> • El nodo raíz es el CEO (MYXER).<br> • Tiene ramas para Caja, Cocina y Servicio (meseros). </p> <p><b>Algoritmo:</b></p> <p>• Se usa búsqueda en árbol para encontrar empleados.<br> • También se recorre el subárbol para listar empleados de un área. </p> </div> </div> </div> </li>
 
         <!-- Manual en Terminal -->
         <li>
@@ -198,6 +129,7 @@
                         <p>Primero se muestra el sistema de gestión y las opciones que puedes hacer.</p>
                         <p>Si das enter podrás ver el menú principal: emergencias, clientes, tareas, ver todo, empleados y salir.</p>
                         <img src="imagenes/captura1.png" width="600">
+                        <p class="comentario">Pantalla inicial del sistema con todas las opciones disponibles.</p>
                     </div>
                 </div>
 
@@ -206,12 +138,19 @@
                     <div class="apartado-content">
                         <p>Opción 1 → Agregar nueva emergencia.</p>
                         <img src="imagenes/captura2.png" width="600">
+                        <p class="comentario">Se registran emergencias nuevas en la pila.</p>
+
                         <p>Opción 2 → Atender la emergencia en el tope.</p>
                         <img src="imagenes/captura3.png" width="600">
+                        <p class="comentario">El sistema elimina y atiende la emergencia más reciente (LIFO).</p>
+
                         <p>Opción 4 → Consultar la emergencia del tope.</p>
                         <img src="imagenes/captura4.png" width="600">
+                        <p class="comentario">Muestra la emergencia más reciente sin eliminarla.</p>
+
                         <p>Opción 5 → Ver todas las emergencias.</p>
                         <img src="imagenes/captura5.png" width="600">
+                        <p class="comentario">Lista todas las emergencias registradas.</p>
                     </div>
                 </div>
 
@@ -220,12 +159,19 @@
                     <div class="apartado-content">
                         <p>Opción 1 → Agregar cliente.</p>
                         <img src="imagenes/capturalol.png" width="600">
+                        <p class="comentario">Se ingresan los datos de un nuevo cliente en la cola.</p>
+
                         <p>Opción 2 → Atender cliente.</p>
                         <img src="imagenes/captura10.png" width="600">
+                        <p class="comentario">Se atiende al cliente más antiguo en espera (FIFO).</p>
+
                         <p>Opción 3 → Atender cliente en lista.</p>
                         <img src="imagenes/captura11.png" width="600">
+                        <p class="comentario">Consulta el cliente siguiente sin eliminarlo.</p>
+
                         <p>Opción 4 → Ver clientes en espera.</p>
                         <img src="imagenes/captura12.png" width="600">
+                        <p class="comentario">Muestra todos los clientes en la cola de espera.</p>
                     </div>
                 </div>
 
@@ -234,12 +180,19 @@
                     <div class="apartado-content">
                         <p>Opción 1 → Agregar tarea.</p>
                         <img src="imagenes/captura13.png" width="600">
+                        <p class="comentario">Se añaden nuevas tareas a la lista.</p>
+
                         <p>Opción 2 → Eliminar tarea.</p>
                         <img src="imagenes/captura15.png" width="600">
+                        <p class="comentario">Elimina la tarea seleccionada de la lista.</p>
+
                         <p>Opción 3 → Buscar tarea por texto.</p>
                         <img src="imagenes/captura17.png" width="600">
+                        <p class="comentario">Permite localizar una tarea escribiendo su descripción.</p>
+
                         <p>Opción 4 → Ver lista de tareas.</p>
                         <img src="imagenes/captura18.png" width="600">
+                        <p class="comentario">Lista todas las tareas pendientes en el sistema.</p>
                     </div>
                 </div>
 
@@ -248,6 +201,7 @@
                     <div class="apartado-content">
                         <p>Opción 4 del menú principal → Ver emergencias, clientes y tareas.</p>
                         <img src="imagenes/captura19.png" width="600">
+                        <p class="comentario">Muestra un resumen global de todas las estructuras.</p>
                     </div>
                 </div>
 
@@ -256,12 +210,19 @@
                     <div class="apartado-content">
                         <p>Opción 1 → CEO</p>
                         <img src="imagenes/captura20.png" width="600">
+                        <p class="comentario">Nodo raíz de la jerarquía del restaurante.</p>
+
                         <p>Opción 2 → Caja</p>
                         <img src="imagenes/captura21.png" width="600">
+                        <p class="comentario">Empleados asignados al área de caja.</p>
+
                         <p>Opción 3 → Cocina</p>
                         <img src="imagenes/captura22.png" width="600">
+                        <p class="comentario">Personal de cocina dentro del árbol binario.</p>
+
                         <p>Opción 4 → Meseros</p>
                         <img src="imagenes/captura23.png" width="600">
+                        <p class="comentario">Listado de meseros en el sistema.</p>
                     </div>
                 </div>
 
@@ -270,8 +231,11 @@
                     <div class="apartado-content">
                         <p>Opción 1 → Estado detallado de las mesas.</p>
                         <img src="imagenes/captura26.png" width="600">
+                        <p class="comentario">Muestra el estado de cada mesa del restaurante.</p>
+
                         <p>Opción 2 → Ordenar clientes alfabéticamente.</p>
                         <img src="imagenes/captura27.png" width="600">
+                        <p class="comentario">Organiza a los clientes por orden alfabético.</p>
                     </div>
                 </div>
 
@@ -280,6 +244,7 @@
                     <div class="apartado-content">
                         <p>Opción 6 del menú principal → salir del programa.</p>
                         <img src="imagenes/captura24.png" width="600">
+                        <p class="comentario">Finaliza la ejecución del sistema.</p>
                     </div>
                 </div>
 
@@ -296,7 +261,6 @@
     </ul>
 
     <script>
-        // Abrir/cerrar submenús principales
         function toggleSubmenu(element) {
             let allSubmenus = document.querySelectorAll('.submenu');
             allSubmenus.forEach(sub => {
@@ -309,7 +273,6 @@
             submenu.style.display = (submenu.style.display === 'block') ? 'none' : 'block';
         }
 
-        // Abrir/cerrar apartados internos
         function toggleApartado(element) {
             let content = element.nextElementSibling;
             let allContents = document.querySelectorAll('.apartado-content');
