--- a/index.html
+++ b/index.html
@@ -584,6 +584,8 @@
                         <p>Desde esta opción se visualiza la jerarquía del restaurante: CEO, Caja, Cocina y Meseros.</p>
                         <img src="ImagenesInterfaz/img4.png" width="600">
                         <p class="comentario">Pantalla de como es en la interfaz gráfica.</p>
+                        <img src="ImagenesInterfaz/img11.png" width="600">
+                        <p class="comentario">Ejemplo de la jerarquía de empleados mostrada en la interfaz gráfica.</p>
                     </div>
                 </div>
 
@@ -594,6 +596,7 @@
                         <img src="ImagenesInterfaz/img5.png" width="600">
                         <p class="comentario">Ejemplo de reportes generados desde la interfaz gráfica.</p>
                         <img src="ImagenesInterfaz/img9.png" width="600">
+                        <img src="ImagenesInterfaz/img10.png" width="600">
                     </div>
                 </div>
 
