--- a/index.html
+++ b/index.html
@@ -608,13 +608,11 @@
                 <div class="apartado">
                     <h3 onclick="toggleApartado(this)">Ver Video</h3>
                     <div class="apartado-content">
-                        <p>Puedes ver el video explicativo del sistema en el siguiente enlace:</p>
+                        <p>Puedes ver el video explicativo del sistema a continuacion</p>
                         <p>
-                            <a href="AQUI_PON_EL_LINK_DEL_VIDEO" target="_blank" style="color: #007bff; text-decoration: underline;">
-                                Ver video explicativo
-                            </a>
+                                <video width="560" height="315" controls>
+                                <source src="imagenes/video1.mp4" type="video/mp4">
                         </p>
-                        <p class="comentario">Haz clic en el enlace para abrir el video en una nueva pestaña.</p>
                     </div>
                 </div>
             </div>
