--- a/index.html
+++ b/index.html
@@ -602,22 +602,31 @@
 
 <li>
         <!-- Apartado de Video Explicativo -->
-        <li>
-            <a onclick="toggleSubmenu(this)">Video Explicativo</a>
-            <div class="submenu">
-                <div class="apartado">
-                    <h3 onclick="toggleApartado(this)">Ver Video</h3>
-                    <div class="apartado-content">
-                        <p>Puedes ver el video explicativo del sistema a continuacion</p>
-                        <p>
-                                <video width="560" height="315" controls>
-                                <source src="imagenes/video1.mp4" type="video/mp4">
-                        </p>
-                    </div>
-                </div>
+         <li>
+    <a onclick="toggleSubmenu(this)">Video Explicativo</a>
+    <div class="submenu">
+        <div class="apartado">
+            <h3 onclick="toggleApartado(this)">Ver Video</h3>
+            <div class="apartado-content">
+                <p>Puedes ver el video explicativo del sistema a continuación</p>
+                <p>
+                    <video width="560" height="315" controls>
+                        <source src="imagenes/video1.mp4" type="video/mp4">
+                    </video>
+                </p>
+                <p>
+    O si prefieres verlo en YouTube:  
+    <a href="https://youtu.be/gikgsDfeeG8?si=IVdd-PeZpckHg8KE" target="_blank" style="color:blue; font-weight:bold; text-decoration:underline;">
+        https://youtu.be/gikgsDfeeG8?si=IVdd-PeZpckHg8KE
+    </a>
+</p>
+
             </div>
-        </li>
-    </ul>
+        </div>
+    </div>
+</li>
+</ul>
+
 
     <script>
     function toggleSubmenu(element) {
